--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,12 +8,36 @@
   <!-- Bootstrap CSS and JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-  
-  
 
-  <title>It works</title>
+  <title>CASA Notes</title>
 </head>
 <body>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#cn-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#/">CASA Notes</a>
+    </div>
+    <div class="collapse navbar-collapse" id="cn-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#/activities">Activities</a></li>
+        <li><a href="#/reports">Reports</a></li>
+        <li><a href="#/timeline">Timeline</a></li>
+        <li><a href="#/contacts">Contacts</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/settings">Settings</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -26,6 +50,7 @@
   </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
