--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="casaNotesApp">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,38 +21,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">CASA Notes</a>
+      <a ui-sref="chooser" class="navbar-brand">CASA Notes</a>
     </div>
     <div class="collapse navbar-collapse" id="cn-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#/activities">Activities</a></li>
-        <li><a href="#/reports">Reports</a></li>
-        <li><a href="#/timeline">Timeline</a></li>
-        <li><a href="#/contacts">Contacts</a></li>
+      <ul class="nav navbar-nav" ui-view="personHeader">
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/settings">Settings</a></li>
+        <li ui-sref-active="active"><a ui-sref="settings">Settings</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>It works!</h1>
-    </div>
-    <div class="col-sm-9 col-sm-offset-3">
-      <p>Geoff wrote {{blah}}.</p>
-      <p><input type="text" ng-model="blah">
-    </div>
-  </div>
-</div>
+<div ui-view="mainView" class="container"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
+<script src="controllers.js"></script>
 </body>
 </html>
