--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -1,1 +1,82 @@
-activity
+<h1>Activity Details</h1>
+<form class="form-horizontal">
+  <div class="form-group">
+    <label for="name" class="col-sm-2 control-label">Activity Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="name">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="date" class="col-sm-2 control-label">Date</label>
+    <div class="col-sm-4">
+      <input type="date" class="form-control" id="date">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="hours" class="col-sm-2 control-label">Hours</label>
+    <div class="col-sm-4">
+      <input type="number" class="form-control" id="hours">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="summary" class="col-sm-2 control-label">Summary</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" id="summary" rows="3"></textarea>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="successes" class="col-sm-2 control-label">Successes</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" id="successes" rows="3"></textarea>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="concerns" class="col-sm-2 control-label">Concerns</label>
+    <div class="col-sm-10">
+      <textarea class="form-control" id="concerns" rows="3"></textarea>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-sm-2 control-label">Key Areas</label>
+    <div class="col-sm-5">
+      <div class="checkbox">
+        <label><input type="checkbox" id="selfesteem">Self-Esteem Building</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="trust">Trust &amp; Relationship Building</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="cultural">Cultural &amp; Community Events</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="experiences">New Experiences</label>
+      </div>
+    </div>
+    <div class="col-sm-5">
+      <div class="checkbox">
+        <label><input type="checkbox" id="educational">Educational Support</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="extracurricular">Extracurricular Activities</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="healthy">Healthy Choices &amp; Behaviors</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" id="developmental">Developmental Milestones/Independent Living Skills</label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-10 col-sm-offset-2">
+      <button type="button" class="btn btn-success" ng-click="save()">Save</button>
+      <button type="button" class="btn btn-default" ui-sref="person.activities">Cancel</button>
+    </div>
+  </div>
+</form>
