--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -1,44 +1,47 @@
 <h1>Activity Details</h1>
-<form class="form-horizontal">
-  <div class="form-group">
+<div ng-if="error" class="alert alert-danger" role="alert">
+  {{error}}
+</div>
+<form class="form-horizontal" name="activityForm" novalidate>
+  <div class="form-group" ng-class="{ 'has-error' : activityForm.name.$invalid && activityForm.name.$touched }">
     <label for="name" class="col-sm-2 control-label">Activity Name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="name">
+      <input type="text" class="form-control" id="name" name="name" ng-model="activity.name" required>
     </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group" ng-class="{ 'has-error' : activityForm.date.$invalid && activityForm.date.$touched }">
     <label for="date" class="col-sm-2 control-label">Date</label>
     <div class="col-sm-4">
-      <input type="date" class="form-control" id="date">
+      <input class="form-control" id="date" name="date" ng-model="activity.date" data-provide="datepicker" data-date-format="yyyy-mm-dd" data-date-autoclose="true" required>
     </div>
   </div>
 
-  <div class="form-group">
+  <div class="form-group" ng-class="{ 'has-error' : activityForm.hours.$invalid && activityForm.hours.$touched }">
     <label for="hours" class="col-sm-2 control-label">Hours</label>
     <div class="col-sm-4">
-      <input type="number" class="form-control" id="hours">
+      <input type="number" class="form-control" id="hours" name="hours" ng-model="activity.hours" required>
     </div>
   </div>
 
   <div class="form-group">
     <label for="summary" class="col-sm-2 control-label">Summary</label>
     <div class="col-sm-10">
-      <textarea class="form-control" id="summary" rows="3"></textarea>
+      <textarea class="form-control" id="summary" rows="3" ng-model="activity.summary"></textarea>
     </div>
   </div>
   
   <div class="form-group">
     <label for="successes" class="col-sm-2 control-label">Successes</label>
     <div class="col-sm-10">
-      <textarea class="form-control" id="successes" rows="3"></textarea>
+      <textarea class="form-control" id="successes"rows="3" ng-model="activity.successes"></textarea>
     </div>
   </div>
 
   <div class="form-group">
     <label for="concerns" class="col-sm-2 control-label">Concerns</label>
     <div class="col-sm-10">
-      <textarea class="form-control" id="concerns" rows="3"></textarea>
+      <textarea class="form-control" id="concerns" rows="3" ng-model="activity.concerns"></textarea>
     </div>
   </div>
 
@@ -46,37 +49,38 @@
     <label class="col-sm-2 control-label">Key Areas</label>
     <div class="col-sm-5">
       <div class="checkbox">
-        <label><input type="checkbox" id="selfesteem">Self-Esteem Building</label>
+        <label><input type="checkbox" id="selfesteem" ng-model="activity.selfesteem">Self-Esteem Building</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="trust">Trust &amp; Relationship Building</label>
+        <label><input type="checkbox" id="trust" ng-model="activity.trust">Trust &amp; Relationship Building</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="cultural">Cultural &amp; Community Events</label>
+        <label><input type="checkbox" id="cultural" ng-model="activity.cultural">Cultural &amp; Community Events</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="experiences">New Experiences</label>
+        <label><input type="checkbox" id="experiences" ng-model="activity.experiences">New Experiences</label>
       </div>
     </div>
     <div class="col-sm-5">
       <div class="checkbox">
-        <label><input type="checkbox" id="educational">Educational Support</label>
+        <label><input type="checkbox" id="educational" ng-model="activity.educational">Educational Support</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="extracurricular">Extracurricular Activities</label>
+        <label><input type="checkbox" id="extracurricular" ng-model="activity.extracurricular">Extracurricular Activities</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="healthy">Healthy Choices &amp; Behaviors</label>
+        <label><input type="checkbox" id="healthy" ng-model="activity.healthy">Healthy Choices &amp; Behaviors</label>
       </div>
       <div class="checkbox">
-        <label><input type="checkbox" id="developmental">Developmental Milestones/Independent Living Skills</label>
+        <label><input type="checkbox" id="milestones" ng-model="activity.milestones">Developmental Milestones/Independent Living Skills</label>
       </div>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-10 col-sm-offset-2">
-      <button type="button" class="btn btn-success" ng-click="save()">Save</button>
+      <button type="button" class="btn btn-success" ng-click="save()" ng-disabled="activityForm.$invalid">Save</button>
       <button type="button" class="btn btn-default" ui-sref="person.activities">Cancel</button>
+      <button type="button" class="btn btn-danger" ng-click="delete()" ng-if="activity.id">Delete</button>
     </div>
   </div>
 </form>
