--- a/src/main/resources/static/chooser.html
+++ b/src/main/resources/static/chooser.html
@@ -1,4 +1,20 @@
-Choose a person:
-<ul>
-  <li ng-repeat="person in people"><a ui-sref="person.overview({ personId: person.id })">{{person.name}}</a></li>
-</ul>
+<h1>Choose a Person</h1>
+<div class="row">
+  <div class="col-sm-6">
+    <ul>
+      <li ng-repeat="person in people">
+        <a ui-ssref="person.activities({ personId: person.id })">{{person.name}}</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="col-sm-6">
+    <form class="form-inline" name="addPersonForm" ng-submit="addPerson()" novalidate>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" ng-model="toAdd.name" required>
+        <button type="submit" class="btn btn-default btn-sm" ng-disabled="addPersonForm.$invalid">Add</button>
+      </div>
+    </form>
+  </div>
+</div>
