Better descriptions of successes and concerns

--- a/src/main/resources/static/activity.html
+++ b/src/main/resources/static/activity.html
@@ -32,14 +32,14 @@
   </div>
   
   <div class="form-group">
-    <label for="successes" class="col-sm-2 control-label">Successes</label>
+    <label for="successes" class="col-sm-2 control-label">Successes (for&nbsp;report)</label>
     <div class="col-sm-10">
       <textarea class="form-control" id="successes"rows="3" ng-model="activity.successes"></textarea>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="concerns" class="col-sm-2 control-label">Concerns</label>
+    <label for="concerns" class="col-sm-2 control-label">Concerns (for&nbsp;report)</label>
     <div class="col-sm-10">
       <textarea class="form-control" id="concerns" rows="3" ng-model="activity.concerns"></textarea>
     </div>
