--- a/src/main/resources/static/reports.html
+++ b/src/main/resources/static/reports.html
@@ -16,9 +16,9 @@
 
   <div ng-if="report">
     <div class="form-group">
-      <label for="hours" class="col-sm-2 control-label">Hours</label>
+      <label for="duration" class="col-sm-2 control-label">Duration</label>
       <div class="col-sm-10">
-        <input id="hours" class="form-control" ng-model="report.hours" readonly>
+        <input id="duration" class="form-control" ng-model="formattedDuration" readonly>
       </div>
     </div>
 
