--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS and JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="bootstrap-datepicker.min.css">
+  <link rel="stylesheet" href="lib/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="lib/bootstrap-datepicker.min.css">
 
   <title>CASA Notes</title>
 </head>
@@ -36,14 +36,14 @@
 
 <div ui-view="mainView" class="container"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.14/angular-ui-router.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="duration.js"></script>
-<script src="bootstrap-datepicker.min.js"></script>
+<script src="lib/jquery.min.js"></script>
+<script src="lib/angular.min.js"></script>
+<script src="lib/angular-ui-router.min.js"></script>
+<script src="lib/angular-route.min.js"></script>
+<script src="lib/angular-resource.min.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="lib/duration.js"></script>
+<script src="lib/bootstrap-datepicker.min.js"></script>
 <script src="controllers.js"></script>
 </body>
 </html>
